# mug

./: .dockerignore  .gitattributes  .gitignore  .importlinter  Makefile  README.md  TESTING_POLICY.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  review.md  ruff.toml  task.md
.github/workflows/: ci-cd.yml  ci-pr.yml  ci-push.yml  ci-tag.yml  commitlint.yml  smoke.yml
.husky/: commit-msg
.smoke/: build-results.json
config/node/: conventional-changelogrc.js
docker/: Dockerfile
docs/: CHANGELOG.md  CONTRIBUTING.md  TESTING_POLICY.md
requirements/2025/08/20/: req_20250820T142442+0000.xml
requirements/2025/08/22/: req_20250822T140135+0000.xml
src/mug/: __init__.py  __main__.py  cli.py
src/mug/cli/: __main__.py  container.py  help_catalog.py
src/mug/common/application/: __init__.py  bootstrap.py  mediator.py  paging.py  pipeline.py  public.py  result.py  time.py  trace.py
src/mug/common/domain/: __init__.py  entity.py  errors.py  events.py  public.py  value_object.py
src/mug/common/infrastructure/: bootstrap.py  logging_init.py  time_system.py  trace_uuid.py
src/mug/common/presentation/: cli_presenters.py  output.py
src/mug/composition/: __main__.py  bootstrap.py  container.py  telemetry.py
src/mug/modules/users/: __init__.py
tests/docker/: test_docker_smoke.py
tests/import-linter/: test_contracts_pass_on_clean_tree.py  test_forbidden_contracts_negative.py
tests/main-checks/: test_config_files.py  test_repo_basics.py  test_workflows.py
tests/smoke/: test_workflows_exist.py
(+40 files in other folders)
